Начало верстки. Добавлен компонент аккордеона

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,12 +1,30 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="ru">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/img/vite.svg"/>
+    <!--    <link rel="icon" type="image/svg+xml" href="/img/vite.svg"/>-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>{{title}}</title>
+    <title>Сайт блога</title>
 </head>
 <body class="d-flex flex-column h-100">
 <header class="header">
-123
+    <div class="container header__container">
+        <a class="link" href="/">
+            <img src="./img/icons/logo.svg" alt="#" class="logo">
+        </a>
+
+        <nav class="nav header__nav">
+            <ul class="header__nav-list">
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Главная</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Посты</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Логин</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
