--- a/src/scss/common/_fonts.scss
+++ b/src/scss/common/_fonts.scss
@@ -1,9 +1,72 @@
+//@font-face {
+//  font-family: 'Gerbera';
+//  src: url('/fonts//fonts/Gerbera.eot');
+//  src: url('/fonts//fonts/Gerbera.eot?#iefix') format('embedded-opentype'),
+//  url('/fonts//fonts/Gerbera.woff') format('woff'),
+//  url('/fonts//fonts/Gerbera.ttf') format('truetype');
+//  font-weight: normal;
+//  font-style: normal;
+//}
 @font-face {
-  font-family: 'Gerbera';
-  src: url('/fonts/Gerbera.eot');
-  src: url('/fonts/Gerbera.eot?#iefix') format('embedded-opentype'),
-  url('/fonts/Gerbera.woff') format('woff'),
-  url('/fonts/Gerbera.ttf') format('truetype');
+  font-family: 'Archivo Narrow';
+  src: url('/fonts/ArchivoNarrow-Regular.woff2') format('woff2'),
+  url('/fonts/ArchivoNarrow-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src: url('/fonts/SourceSansPro-Regular.woff2') format('woff2'),
+  url('/fonts/SourceSansPro-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Bold.woff2') format('woff2'),
+  url('/fonts/Lato-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-BoldItalic.woff2') format('woff2'),
+  url('/fonts/Lato-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Regular.woff2') format('woff2'),
+  url('/fonts/Lato-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src: url('/fonts/SourceSansPro-BoldItalic.woff2') format('woff2'),
+  url('/fonts/SourceSansPro-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src: url('/fonts/SourceSansPro-Bold.woff2') format('woff2'),
+  url('/fonts/SourceSansPro-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
