--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -4,6 +4,6 @@
         asaфыв
     </div>
 </footer>
-<script type="module" src="/main.js"></script>
+<script type="module" src="/scripts/main.js"></script>
 </body>
 </html>
