--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,7 +1,7 @@
 
-<footer class="footer mt-auto py-3">
+<footer class="footer">
     <div class="container">
-        asaфыв
+        asaфывasd
     </div>
 </footer>
 <script type="module" src="/scripts/main.js"></script>
