--- a/src/pages/index/hero.hbs
+++ b/src/pages/index/hero.hbs
@@ -15,37 +15,57 @@
         <div class="main-hero__wrapper">
             <div class="main-hero__sidebar">
 
-                <p>Build a better sales and marketing
+                <p class="main-hero__sidebar-text">Build a better sales and marketing
                     strategy with our latest tips, insights
                     and best practices. Let Alfred help
                     you in your sales journey.</p>
-                <span>Categories</span>
-                <ul>
-                    <li>
+                <span class="main-hero__sidebar-title">Categories</span>
+                <ul class="main-hero__sidebar-list">
+                    <li class="main-hero__sidebar-list-item">
 
-                        <label for="1">
-                            <input id="1" type="checkbox">
+                        <label class="main-hero__sidebar-list-item-label" for="1">
+                            <input class="main-hero__sidebar-list-item-label-checkbox" id="1" type="checkbox">
+                            <span class="main-hero__sidebar-list-item-label-custom-checkbox">
+                                <svg>
+                                <use xlink:href="#accept"></use>
+                                </svg>
+                            </span>
                             <span>Growth Hacks</span>
                         </label>
                     </li>
-                    <li>
+                    <li class="main-hero__sidebar-list-item">
 
-                        <label for="2">
-                            <input id="2" type="checkbox">
+                        <label class="main-hero__sidebar-list-item-label" for="2">
+                            <input class="main-hero__sidebar-list-item-label-checkbox" id="2" type="checkbox">
+                            <span class="main-hero__sidebar-list-item-label-custom-checkbox">
+                                <svg>
+                                <use xlink:href="#accept"></use>
+                                </svg>
+                            </span>
                             <span>Lead Generation</span>
                         </label>
                     </li>
-                    <li>
+                    <li class="main-hero__sidebar-list-item">
 
-                        <label for="3">
-                            <input id="3" type="checkbox">
+                        <label class="main-hero__sidebar-list-item-label" for="3">
+                            <input class="main-hero__sidebar-list-item-label-checkbox" id="3" type="checkbox">
+                            <span class="main-hero__sidebar-list-item-label-custom-checkbox">
+                                <svg>
+                                <use xlink:href="#accept"></use>
+                                </svg>
+                            </span>
                             <span>LinkedIn Sales Navigator</span>
                         </label>
                     </li>
-                    <li>
+                    <li class="main-hero__sidebar-list-item">
 
-                        <label for="4">
-                            <input id="4" type="checkbox">
+                        <label class="main-hero__sidebar-list-item-label" for="4">
+                            <input class="main-hero__sidebar-list-item-label-checkbox" id="4" type="checkbox">
+                            <span class="main-hero__sidebar-list-item-label-custom-checkbox">
+                                <svg>
+                                <use xlink:href="#accept"></use>
+                                </svg>
+                            </span>
                             <span>LinkedIn Tips & Tricks</span>
                         </label>
                     </li>
@@ -60,7 +80,8 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s Best Startup Employers 2024</p>
+                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                            Best Startup Employers 2024</p>
                         <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
                     </div>
                 </li>
@@ -71,7 +92,8 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s Best Startup Employers 2024</p>
+                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                            Best Startup Employers 2024</p>
                         <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
                     </div>
                 </li>
@@ -82,7 +104,8 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s Best Startup Employers 2024</p>
+                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                            Best Startup Employers 2024</p>
                         <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
                     </div>
                 </li>
@@ -93,7 +116,8 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s Best Startup Employers 2024</p>
+                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                            Best Startup Employers 2024</p>
                         <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
                     </div>
                 </li>
