--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Сайт блога</title>
 </head>
-<body class="d-flex flex-column h-100">
+<body>
+
+<div class="wrapper">
+    <div class="image-container">
+        <img src="./img/space-background.jpg" alt="Hero Image" class="space-anima__image">
+    </div>
+</div>
+
+
+
+
 <header class="header">
     <div class="container header__container">
         <a class="link" href="/">
