--- a/src/scss/common/_global.scss
+++ b/src/scss/common/_global.scss
@@ -84,3 +84,10 @@ img {
 span {
   display: inline-block;
 }
+
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+}
