--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  margin-top: 180vh;
   &__container {
     display: flex;
     align-items: center;
@@ -7,6 +8,7 @@
   }
 
   &__nav {
+    color: var(--cold-canada);
     &-list {
       display: flex;
       align-items: center;
@@ -14,3 +16,28 @@
     }
   }
 }
+
+.wrapper {
+  width: 100vw;
+  position: relative;
+  z-index: 1;
+}
+.image-container {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  perspective: 500px;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+  }
+}
+
