--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<div class="wrapper">
-    <div class="image-container">
+<div class="space-wrapper">
+    <div class="space-image-container">
         <img src="./img/space-background.jpg" alt="Hero Image" class="space-anima__image">
     </div>
 </div>
