--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  margin-top: 180vh;
+  margin-top: calc(180dvh + 10px);
   &__container {
     display: flex;
     align-items: center;
@@ -17,12 +17,12 @@
   }
 }
 
-.wrapper {
+.space-wrapper {
   width: 100vw;
   position: relative;
   z-index: 1;
 }
-.image-container {
+.space-image-container {
   width: 100%;
   height: 100vh;
   position: absolute;
