--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -10,10 +10,11 @@
 
 <div class="space-wrapper">
     <div class="space-image-container">
-        <img src="./img/space-background.jpg" alt="Hero Image" class="space-anima__image">
+<!--        <img src="./img/space-background.jpg" alt="Hero Image" class="space-anima__image">-->
+        <video loop autoplay muted playsinline src="./img/video_bg_1920x1080.mp4" class="space-anima__image"></video>
+        <div class="space-wrapper__content">asdasdsdaasdasd</div>
     </div>
 </div>
-
 
 
 
