--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -34,10 +34,22 @@
   overflow: hidden;
 
   img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center center;
+
   }
+}
+
+.space-anima__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+
+.space-wrapper__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: red;
 }
 
