add animation text

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -12,7 +12,9 @@
     <div class="space-image-container">
 <!--        <img src="./img/space-background.jpg" alt="Hero Image" class="space-anima__image">-->
         <video loop autoplay muted playsinline src="./img/video_bg_1920x1080.mp4" class="space-anima__image"></video>
-        <div class="space-wrapper__content">asdasdsdaasdasd</div>
+        <div class="space-wrapper__content">
+            <h1 class="h1 title space-wrapper__title">«Nos sumus pulvis stellaris, per voluntatem cosmī conscientiam adeptus.»</h1>
+        </div>
     </div>
 </div>
 
