--- a/src/pages/index/hero.hbs
+++ b/src/pages/index/hero.hbs
@@ -63,7 +63,6 @@
                         </label>
                     </li>
                     <li class="main-hero__sidebar-list-item">
-
                         <label class="main-hero__sidebar-list-item-label" for="4">
                             <input class="main-hero__sidebar-list-item-label-checkbox" id="4" type="checkbox">
                             <span class="main-hero__sidebar-list-item-label-custom-checkbox">
@@ -90,9 +89,12 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                                Best Startup Employers 2024</p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
+
                     </div>
                 </li>
                 <li class="main-hero__list-item">
@@ -102,9 +104,10 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius </p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
                     </div>
                 </li>
                 <li class="main-hero__list-item">
@@ -114,9 +117,11 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                                Best Startup Employers 2024</p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
                     </div>
                 </li>
                 <li class="main-hero__list-item">
@@ -126,9 +131,11 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                                Best Startup Employers 2024</p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
                     </div>
                 </li>
                 <li class="main-hero__list-item">
@@ -138,9 +145,11 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                                Best Startup Employers 2024</p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
                     </div>
                 </li>
                 <li class="main-hero__list-item">
@@ -150,9 +159,11 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                                Best Startup Employers 2024</p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
                     </div>
                 </li>
                 <li class="main-hero__list-item">
@@ -162,9 +173,11 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                                Best Startup Employers 2024</p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
                     </div>
                 </li>
                 <li class="main-hero__list-item">
@@ -174,9 +187,11 @@
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                             <li class="main-hero__list-item-content-list-item">Product News</li>
                         </ul>
-                        <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
-                            Best Startup Employers 2024</p>
-                        <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        <div class="main-hero__list-item-content-wrapper">
+                            <p class="main-hero__list-item-content-descr">LeadGenius Named by Forbes as one of America’s
+                                Best Startup Employers 2024</p>
+                            <span class="main-hero__list-item-content-span">2860 views . 3 min read</span>
+                        </div>
                     </div>
                 </li>
             </ul>
