--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -9,7 +9,7 @@
 <body>
 
 <div class="space-wrapper">
-    <div class="space-image-container">
+    <div class="space-wrapper__container">
 <!--        <img src="./img/space-background.jpg" alt="Hero Image" class="space-anima__image">-->
         <video loop autoplay muted playsinline src="./img/video_bg_1920x1080.mp4" class="space-anima__image"></video>
         <div class="space-wrapper__content">
@@ -23,10 +23,15 @@
 <header class="header">
     <div class="container header__container">
         <a class="link" href="/">
-            <img src="./img/icons/logo.svg" alt="#" class="logo">
+            <img src="./img/icons/logo.svg" alt="#" class="header__logo logo">
         </a>
 
         <nav class="nav header__nav">
+            <div class="header-burger">
+                <span class="header-burger__line"></span>
+                <span class="header-burger__line"></span>
+                <span class="header-burger__line"></span>
+            </div>
             <ul class="header__nav-list">
                 <li class="nav__item">
                     <a href="#" class="nav__link">Главная</a>
