--- a/src/scss/pages/index/_index.scss
+++ b/src/scss/pages/index/_index.scss
@@ -1,14 +1,30 @@
+
+@use "@scss/common/mixins" as *;
+
 .main-hero {
   &__top-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
+    margin-bottom: 20px;
+
+    @include v640 {
+      flex-direction: column;
+      gap: 16px;
+    }
   }
 
   &__wrapper {
     display: grid;
+    gap: 20px;
     grid-template-columns: repeat(4, 1fr);
+
+    @include v1024 {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
   }
 
   &__sidebar {
@@ -16,7 +32,7 @@
 
     &-text {
       font-weight: 400;
-      font-size: 17px;
+      font-size: 16px;
       line-height: 1.75;
       color: var(--cold-canada);
     }
@@ -28,6 +44,15 @@
       line-height: 1.75;
       color: var(--cold-canada);
       margin-bottom: 20px;
+
+      @include v1024 {
+        font-size: 18px;
+      }
+
+      @include v640 {
+        margin-bottom: 16px;
+        font-size: 20px;
+      }
     }
 
     &-list {
@@ -40,6 +65,19 @@
       line-height: .9;
       color: var(--cold-canada);
       margin-bottom: 16px;
+
+      @include v1024 {
+        font-size: 16px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @include v640 {
+        display: flex;
+
+      }
+
+
 
       &-item {
         &-label {
@@ -66,6 +104,11 @@
             border-radius: 6px;
             border: 1px solid var(--cold-canada);
 
+            @include v640 {
+              width: 24px;
+              height: 24px;
+            }
+
             svg {
               opacity: 0;
               width: 25px;
@@ -76,6 +119,11 @@
               transform: translate(-50%, -50%);
               fill: var(--cold-canada);
               transition: opacity .3s ease;
+
+              @include v640 {
+                width: 20px;
+                height: 20px;
+              }
             }
           }
         }
@@ -122,6 +170,10 @@
             #64748b 100%);
     color: var(--cold-canada);
 
+    @include v640 {
+      width: 100%;
+    }
+
     &::placeholder {
       color: var(--cold-canada);
       font-style: italic;
@@ -154,9 +206,17 @@
     display: grid;
     grid-column: 3 span;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
+    gap: 20px;
+
+    @include v640 {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
 
     &-item {
+      display: flex;
+      flex-direction: column;
       border-radius: 6px;
       background: linear-gradient(135deg,
               #0f172a 0%,
@@ -169,11 +229,25 @@
 
 
       &-content {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
         padding: 10px;
+        height: 100%;
+
+        &-wrapper {
+          display: flex;
+          height: 100%;
+          flex-direction: column;
+          justify-content: space-between;
+          gap: 8px;
+        }
+
 
         &-list {
           display: flex;
           gap: 8px;
+          flex-wrap: wrap;
 
           &-item {
             color: var(--cold-canada);
@@ -183,6 +257,11 @@
             padding: 6px 8px;
             border-radius: 28px;
             border: 1px solid var(--cold-canada);
+
+            @include v640 {
+              font-size: 10px;
+              padding: 0px 4px;
+            }
           }
         }
 
@@ -192,6 +271,10 @@
           font-weight: 600;
           font-size: 24px;
           line-height: 1.3;
+
+          @include v1024 {
+            font-size: 18px;
+          }
         }
       }
     }
