--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,7 +1,147 @@
-
 <footer class="footer">
-    <div class="container">
-        asaфывasd
+    <div class="container footer-container">
+        <div class="footer__left-content">
+            <img src="./img/icons/footer_logo.svg" alt="Логотип" class="footer__left-content-logo">
+            <p class="footer__left-content-text">Lead Genius is a demand generation
+                company that provides end-to-end
+                sales enablement services from
+                Database Management to Appointment
+                Setting.</p>
+            <ul class="footer__left-content-social-list">
+                <li class="footer__left-content-social-list-item">
+                    <svg>
+                        <use xlink:href="#twitter"></use>
+                    </svg>
+                </li>
+                <li class="footer__left-content-social-list-item">
+                    <svg>
+                        <use xlink:href="#youtube"></use>
+                    </svg>
+                </li>
+                <li class="footer__left-content-social-list-item">
+                    <svg>
+                        <use xlink:href="#instagram"></use>
+                    </svg>
+                </li>
+            </ul>
+        </div>
+        <ul class="footer__right-content">
+            <ul class="footer__list">
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Solutions
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Account Based
+                        Marketing
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Demand Generation
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        B2B Lead Generation
+                        Services
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Sales Qualified Leads
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Webinar Registration
+                        Leads
+                    </a>
+                </li>
+            </ul>
+
+
+            <ul class="footer__list">
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Company
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Who We Are
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Blogs
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Case Studies
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Press Release
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Ebooks
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Write For Us
+                    </a>
+                </li>
+            </ul>
+
+
+            <ul class="footer__list">
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+                        Contact Us
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+
+                        Sector 16 noida, Uttar Pradesh
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+
+                        Sector 16 noida, Uttar Pradesh
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+
+                        Sector 16C greater noida west,
+                        Uttar Pradesh
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+
+                        +91 0134 56789
+                    </a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__list-item-link">
+
+                        sales@leadgenius.com
+                    </a>
+                </li>
+            </ul>
+
+        </ul>
     </div>
 </footer>
 <script type="module" src="/scripts/main.js"></script>
